@@ -5,13 +5,17 @@
 \alias{plot.prc}
 
 \title{Principal Response Curves for Treatments with Repeated Observations }
-\description{
-  Principal Response Curves (PRC) are a special case of Redundancy Analysis
-  (\code{\link{rda}}) for multivariate responses in
+
+\description{ Principal Response Curves (PRC) are a special case of
+  Redundancy Analysis (\code{\link{rda}}) for multivariate responses in
   repeated observation design. They were originally suggested for
   ecological communities. They should be easier to interpret than
-  traditional constrained ordination. 
+  traditional constrained ordination. They can also be used to study how
+  the effects of a factor \code{A} depend on the levels of a factor
+  \code{B}, that is \code{A + A:B}, in a multivariate response
+  experiment.
 }
+
 \usage{
 prc(response, treatment, time, ...)
 \method{summary}{prc}(object, axis = 1, scaling = 2, digits = 4, ...)
@@ -47,38 +51,37 @@ prc(response, treatment, time, ...)
   \item{cex}{Character expansion for symbols and species labels.}
   \item{\dots}{ Other parameters passed to functions. }
 }
-\details{
-  PRC is a special case of \code{\link{rda}} with a single factor for
-  \code{treatment} and a single factor for \code{time} points in repeated
-  observations. In \pkg{vegan}, the corresponding \code{\link{rda}}
-  model is defined as 
-  \code{rda(response ~ treatment * time + Condition(time))}. Since
-  the \code{time} appears twice in the model formula, its main effects
-  will be aliased, and only interaction terms are available, and will be
+
+\details{ PRC is a special case of \code{\link{rda}} with a single
+  factor for \code{treatment} and a single factor for \code{time} points
+  in repeated observations. In \pkg{vegan}, the corresponding
+  \code{\link{rda}} model is defined as \code{rda(response ~ treatment *
+  time + Condition(time))}. Since the \code{time} appears twice in the
+  model formula, its main effects will be aliased, and only the main
+  effect of treatment and interaction terms are available, and will be
   used in PRC. Instead of usual multivariate ordination diagrams, PRC
   uses canonical (regression) coefficients and species scores for a
   single axis. All that the current functions do is to provide a special
-  \code{summary}  and \code{plot} methods that display the
-  \code{\link{rda}} results in the PRC fashion. With default contrasts
-  (\code{\link{contr.treatment}}) the coefficients are 
-  contrasts against the first level, and the levels must be arranged so
-  that the first level is the control.
+  \code{summary} and \code{plot} methods that display the
+  \code{\link{rda}} results in the PRC fashion. The current version only
+  works with default contrasts (\code{\link{contr.treatment}}) in which
+  the coefficients are contrasts against the first level, and the levels
+  must be arranged so that the first level is the control (or a baseline).
 
   Function \code{summary} prints the species scores and the
   coefficients. Function \code{plot} plots coefficients against
-  \code{time}
-  using \code{\link{matplot}}, and has similar
-  defaults.  The graph (and PRC) is meaningful only if the first
-  \code{treatment} level is the control, as the results are contrasts
-  to the first level when unordered factors are used. The plot also
-  displays species scores on the right vertical axis using function
+  \code{time} using \code{\link{matplot}}, and has similar defaults.
+  The graph (and PRC) is meaningful only if the first \code{treatment}
+  level is the control, as the results are contrasts to the first level
+  when unordered factors are used. The plot also displays species scores
+  on the right vertical axis using function
   \code{\link{linestack}}. Typically the number of species is so high
   that not all can be displayed with the default settings, but users can
   reduce character size or padding (\code{air}) in
   \code{\link{linestack}}, or \code{select} only a subset of the
   species. A legend will be displayed unless suppressed with
   \code{legpos = NA}, and the functions tries to guess where to put the
-  legend if \code{legpos} is not supplied.  
+  legend if \code{legpos} is not supplied.
   
 }
 \value{
@@ -93,17 +96,15 @@ prc(response, treatment, time, ...)
   biological community to stress. Environmental Toxicology and
   Chemistry, 18, 138--148.
 }
-\author{ Jari Oksanen }
+\author{ Jari Oksanen and Cajo ter Braak}
 
-\section{Warning }{
-  The first level of \code{treatment} must be the control, and the
-  treatment contrasts must be used (see \code{\link{contr.treatment}}),
-  so that results are expressed as contrasts to the control.
-  The function works with other contrast types also, but then the user
-  must take care that the resulting coefficients are meaningful.
-  The
-  \code{time} must be an unordered factor.  
-} 
+\section{Warning }{The first level of \code{treatment} must be the
+  control, and the treatment contrasts must be used (see
+  \code{\link{contr.treatment}}), so that results are expressed as
+  contrasts to the control.  The function works with other contrast
+  types also, but then the user must take care that the resulting
+  coefficients are meaningful the resulting coefficient may be
+  meaningless.  The \code{time} must be an unordered factor.  }
 
 \seealso{\code{\link{rda}}, \code{\link{anova.cca}}.}
 \examples{
